# ApprovalTests.cpp.StarterProject_fork

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  testsDemoTest.DemoCombinationTestCase.approved.txt  testsDemoTest.DemoSimpleTestCase.approved.txt  testsNewTest.ApprovingText.approved.txt  testsNewTest.ApprovingWithReporters.approved.txt
approval-tests_with_catch2v3/: CMakeLists.txt  NewTest.cpp
approval-tests_with_catch2v3_amalgamated/: CMakeLists.txt  NewTest.cpp  Tutorial.cpp
lib/: ApprovalTests.v.10.12.2.hpp  ApprovalTests.v.10.13.0.hpp  CMakeLists.txt
lib/ApprovalTests/: CMakeLists.txt
lib/catch2_v3_amalgamated/: CMakeLists.txt  catch_amalgamated.cpp.asc  catch_amalgamated.hpp.asc  url.txt
lib/catch2v3/: CMakeLists.txt
tests/: CMakeLists.txt  DemoTest.cpp  NewTest.cpp  main.cpp
